[tool.poetry]
name = "rrdp-tools"
version = "0.2.1"
description = ""
authors = ["Ties de Kock <ties@tiesdekock.nl>"]
readme = "README.md"
packages = [{include = "rrdp_tools"}]

[project.scripts]
rrdp-tools = "rrdp_tools.cli"

[tool.poetry.dependencies]
python = "^3.11"
rnc2rng = "^2.6.6"
lxml = "^4.9.1"
aiohttp = "^3.9.0b0"
click = "^8.1.3"
asn1crypto = "^1.5.1"
asn1tools = "^0.166.0"
diskcache = "^5.6.3"
pylint = "^3.0.3"
netaddr = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"
pre-commit = "^2.20.0"
black = "^22.10.0"
jupyterlab = "^4.0.0"
pandas = "^2.0.1"
tabulate = "^0.9.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"
pytest-asyncio = "^0.21.1"
twine = "^4.0.2"
check-manifest = "^0.49"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
profile = "black"

[tool.ruff]
ignore = ["E501"]

[tool.pytest]
junit_family = "xunit2"

[settings]
# known_third_party = []
